[gd_scene load_steps=2 format=3 uid="uid://b38brinefo7fa"]

[ext_resource type="Script" uid="uid://dg2ioil52r0be" path="res://scripts/main.gd" id="1_o5qli"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5qli")

[node name="general" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="bt_saveAll" type="Button" parent="general"]
layout_mode = 0
offset_left = 997.0
offset_top = 103.0
offset_right = 1064.0
offset_bottom = 134.0
text = "save All"

[node name="bt_Load" type="Button" parent="general"]
layout_mode = 0
offset_left = 911.0
offset_top = 104.0
offset_right = 982.0
offset_bottom = 135.0
text = "Load"

[node name="bt_ResetSave" type="Button" parent="general"]
layout_mode = 0
offset_left = 911.0
offset_top = 146.0
offset_right = 986.0
offset_bottom = 177.0
text = "Reset All"

[node name="life" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Lb_life" type="Label" parent="life"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 93.0
offset_top = 160.0
offset_right = 238.0
offset_bottom = 197.0
text = "Vida: 100"

[node name="bt_ADD_life" type="Button" parent="life"]
layout_mode = 0
offset_left = 618.0
offset_top = 159.0
offset_right = 666.0
offset_bottom = 190.0
text = "+ 10"

[node name="bt_Sub_life" type="Button" parent="life"]
layout_mode = 0
offset_left = 681.0
offset_top = 158.0
offset_right = 729.0
offset_bottom = 189.0
text = "- 10"

[node name="bt_saveLife" type="Button" parent="life"]
layout_mode = 0
offset_left = 749.0
offset_top = 156.0
offset_right = 820.0
offset_bottom = 187.0
text = "save life"

[node name="item" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Lb_itens" type="Label" parent="item"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 93.0
offset_top = 200.0
offset_right = 383.0
offset_bottom = 364.0
text = "Itens:"
autowrap_mode = 3

[node name="bt_ADD_chave_principal" type="Button" parent="item"]
layout_mode = 0
offset_left = 618.0
offset_top = 200.0
offset_right = 626.0
offset_bottom = 208.0
text = "+ chave principal"

[node name="bt_SUB_chave_principal2" type="Button" parent="item"]
layout_mode = 0
offset_left = 618.0
offset_top = 240.0
offset_right = 753.0
offset_bottom = 271.0
text = "- chave principal"

[node name="settings" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="volume" type="Control" parent="settings"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Lb_volume" type="Label" parent="settings/volume"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 93.0
offset_top = 300.0
offset_right = 238.0
offset_bottom = 337.0
text = "Volume: 50"

[node name="bt_up_volume" type="Button" parent="settings/volume"]
offset_left = 618.0
offset_top = 300.0
offset_right = 689.0
offset_bottom = 331.0
text = "+ volume"

[node name="bt_down_volume" type="Button" parent="settings/volume"]
offset_left = 710.0
offset_top = 300.0
offset_right = 785.0
offset_bottom = 331.0
text = "- volume"

[node name="sound_effect" type="Control" parent="settings"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Lb_sound_effect" type="Label" parent="settings/sound_effect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 93.0
offset_top = 340.0
offset_right = 238.0
offset_bottom = 377.0
text = "Sound Effects:"

[node name="bt_up_sound_effect" type="Button" parent="settings/sound_effect"]
offset_left = 618.0
offset_top = 340.0
offset_right = 697.0
offset_bottom = 371.0
text = "+ sound"

[node name="bt_down_sound_effect" type="Button" parent="settings/sound_effect"]
offset_left = 710.0
offset_top = 340.0
offset_right = 785.0
offset_bottom = 371.0
text = "- sound"

[node name="window" type="Control" parent="settings"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Lb_window" type="Label" parent="settings/window"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 93.0
offset_top = 380.0
offset_right = 238.0
offset_bottom = 417.0
text = "FullScreen:"

[node name="bt_windowed" type="Button" parent="settings/window"]
offset_left = 618.0
offset_top = 380.0
offset_right = 697.0
offset_bottom = 411.0
text = "windowed"

[node name="bt_borderless" type="Button" parent="settings/window"]
offset_left = 720.0
offset_top = 380.0
offset_right = 811.0
offset_bottom = 411.0
text = "borderless"

[node name="bt_fullscreen" type="Button" parent="settings/window"]
offset_left = 825.0
offset_top = 380.0
offset_right = 910.0
offset_bottom = 411.0
text = "fullscreen"

[connection signal="pressed" from="general/bt_saveAll" to="." method="_on_bt_save_all_pressed"]
[connection signal="pressed" from="general/bt_Load" to="." method="_on_bt_load_pressed"]
[connection signal="pressed" from="general/bt_ResetSave" to="." method="_on_bt_reset_save_pressed"]
[connection signal="pressed" from="life/bt_ADD_life" to="." method="_on_bt_add_life_pressed"]
[connection signal="pressed" from="life/bt_Sub_life" to="." method="_on_bt_sub_life_pressed"]
[connection signal="pressed" from="life/bt_saveLife" to="." method="_on_bt_save_life_pressed"]
[connection signal="pressed" from="item/bt_ADD_chave_principal" to="." method="_on_bt_add_chave_principal_pressed"]
[connection signal="pressed" from="item/bt_SUB_chave_principal2" to="." method="_on_bt_sub_chave_principal_pressed"]
[connection signal="pressed" from="settings/volume/bt_up_volume" to="." method="_on_bt_up_volume_pressed"]
[connection signal="pressed" from="settings/volume/bt_down_volume" to="." method="_on_bt_down_volume_pressed"]
[connection signal="pressed" from="settings/sound_effect/bt_up_sound_effect" to="." method="_on_bt_up_sound_effect_pressed"]
[connection signal="pressed" from="settings/sound_effect/bt_down_sound_effect" to="." method="_on_bt_down_sound_effect_pressed"]
[connection signal="pressed" from="settings/window/bt_windowed" to="." method="_on_bt_windowed_pressed"]
[connection signal="pressed" from="settings/window/bt_borderless" to="." method="_on_bt_borderless_pressed"]
[connection signal="pressed" from="settings/window/bt_fullscreen" to="." method="_on_bt_fullscreen_pressed"]
